--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -52,8 +52,12 @@
       border-top: 1px solid #ccc !important;
       box-shadow: inset 0 1px 2px #eee !important;
       text-indent: 5px;
+      padding: 5px !important;
     }
 
+    textarea.min-h-80{
+      min-height: 80px !important;
+    }
     .select2-selection{
       border-left: 1px solid #ccc !important;
       border-right: 1px solid #ccc !important;
@@ -89,6 +93,7 @@
     .input-field label.active {
       transform: translateY(-170%) !important;
       left: 0px;
+      font-size: 12px !important;
     }
     .input-field .prefix~label.active{
       transform: translateY(-170%) !important;
