--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-flash-message.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-flash-message.html.twig
@@ -12,14 +12,14 @@
 
 {% for msg in error %}
   <div class="alert alert-dismissible red  lighten-3 red-text text-darken-2 alert-border-left">
-    <strong>Success!</strong> {{ msg }}
+    <strong>Error!</strong> {{ msg }}
     <button class="close">&times;</button>
   </div>
 {% endfor %}
 
 {% for msg in info %}
   <div class="alert alert-dismissible blue  lighten-4 blue-text text-darken-2 alert-border-left">
-    <strong>Success!</strong> {{ msg }}
+    <strong>Information!</strong> {{ msg }}
     <button class="close">&times;</button>
   </div>
 {% endfor %}
