--- a/src/DashboardBundle/Resources/views/Contact/new.html.twig
+++ b/src/DashboardBundle/Resources/views/Contact/new.html.twig
@@ -10,13 +10,13 @@
 		<div class="title">
 			<h5> Contacts </h5>
 			<div class="btn-group right">
-				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
-				<a id="edit_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i> Save</a>
-				<a id="edit_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-action-done left"></i> Save and Close</a>
+				<a href="{{ path('contact_index') }}" class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
+				<a id="save_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i> Save</a>
+				<a id="save_and_close_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-action-done left"></i> Save and Close</a>
 			</div>
 		</div>
 		<div class="content">
-			<form id="formSubmit" class="form-horizontal" action="{{ path('contact_create') }}" method="post" {{ form_enctype(form) }}>
+			<form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
 				<div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 0rem;">
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12" style="padding-bottom: 0px;">
@@ -43,7 +43,20 @@
 						</div>
 					</div>
 				</div>
+				{{ form_rest(form) }}
 			</form>
 		</div>
 	</div>
+	<script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
+	<script>
+		$(document).ready(function(){
+			$('#save_action').click(function(){
+				App.submit('formSubmit','{{ path('contact_create') }}')
+			});
+
+			$('#save_and_close_action').click(function(){
+				App.submit('formSubmit','{{ path('contact_create_close') }}')
+			});
+		});
+	</script>
 {% endblock content %}
