Create contact functionality

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -51,6 +51,11 @@
           </a>
         </li>
         <li>
+          <a href="{{ path('contactlist_index') }}" class="waves-effect waves-blue"><i
+                class="mdi-file-folder"></i> Contacts List
+          </a>
+        </li>
+        <li>
           <a href="{{ path('upgrade_index') }}" class="waves-effect waves-blue">
             <i class="fa fa-arrow-circle-o-up"></i> Upgrade Plan
           </a>
