Create contact functionality

--- a/src/DashboardBundle/Resources/views/ContactList/index.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
-	<li><a href="#">Contacts</a></li>
+	<li><a href="#">Contacts List</a></li>
 {% endblock breadcrumb%}
 
 {% block content %}
