Create contact functionality

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -52,7 +52,7 @@
         </li>
         <li>
           <a href="{{ path('contactlist_index') }}" class="waves-effect waves-blue"><i
-                class="mdi-file-folder"></i> Contacts List
+                class="mdi mdi-file-folder-shared"></i> Contacts List
           </a>
         </li>
         <li>
