--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -1,11 +1,34 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
-	<li><a href="{{ path('contactlist_index') }}">Contacts</a></li>
+	<li>
+		<a href="{{ path('contactlist_index') }}">Contacts</a>
+		<i class="mdi-navigation-chevron-right"></i>
+	</li>
 	<li><a href="#">Edit</a></li>
 {% endblock breadcrumb%}
 
 {% block content %}
+	<style>
+		.collection .collection-item.avatar {
+			min-height: 60px;
+		}
+		.enable-contact {
+			left: -15px !important;
+			width: 15px !important;
+			height: 15px !important;
+			top: 5px !important;
+		}
+
+		.enable-contact-color {
+			background-color: #35cc3a !important;
+		}
+
+		.disable-contact-color {
+			background-color: #F44336 !important;
+		}
+
+	</style>
 	<div class="card card-data-grid">
 		<div class="title">
 			<h5> Contacts </h5>
@@ -28,6 +51,57 @@
 				</div>
 				{{ form_rest(form) }}
 			</form>
+
+			<div class="row">
+				<div class="col m5">
+					<span><b>	My Contacts</b></span>
+					<ul class="collection">
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
+						</li>
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
+						</li>
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
+						</li>
+					</ul>
+				</div>
+				<div class="col m2">	</div>
+				<div class="col m5">
+					<span><b> Contacts</b></span>
+					<ul class="collection">
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact disable-contact-color"></i></a>
+						</li>
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
+						</li>
+						<li class="collection-item avatar">
+							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
+							<span class="title" style="padding: 0px;">Livan Frometa</span>
+							<p>llfrometa@gmail.com</p>
+							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
 		</div>
 	</div>
 	<script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
