--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -1,115 +1,170 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
-	<li>
-		<a href="{{ path('contactlist_index') }}">Contacts</a>
-		<i class="mdi-navigation-chevron-right"></i>
-	</li>
-	<li><a href="#">Edit</a></li>
-{% endblock breadcrumb%}
+  <li>
+    <a href="{{ path('contactlist_index') }}">Contacts</a>
+    <i class="mdi-navigation-chevron-right"></i>
+  </li>
+  <li><a href="#">Edit</a></li>
+{% endblock breadcrumb %}
 
 {% block content %}
-	<style>
-		.collection .collection-item.avatar {
-			min-height: 60px;
-		}
-		.enable-contact {
-			left: -15px !important;
-			width: 15px !important;
-			height: 15px !important;
-			top: 5px !important;
-		}
+  <style>
+    .collection .collection-item.avatar i.circle-avatar-status {
+      font-size: 18px;
+      line-height: 39px;
+      color: #fff;
+      text-align: center;
+    }
 
-		.enable-contact-color {
-			background-color: #35cc3a !important;
-		}
+    i.circle-avatar-status.red {
+      border: 3px solid pink;
+    }
 
-		.disable-contact-color {
-			background-color: #F44336 !important;
-		}
+    i.circle-avatar-status.green {
+      border: 3px solid #94fc98;
+    }
 
-	</style>
-	<div class="card card-data-grid">
-		<div class="title">
-			<h5> Contacts </h5>
-			<div class="btn-group right">
-				<a href="{{ path('contactlist_index') }}" class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
-				<a id="save_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i> Save</a>
-			</div>
-		</div>
-		<div class="content">
-			<form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
-				<div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 1rem;">
-					<div class="row" style="margin-top: 0rem;">
-						<div class="col m12" style="padding-bottom: 15px;">
-							<div class="input-field">
-								{{ form_widget(form.name) }}
-								<label for="property_lease_term" class="">Name</label>
-							</div>
-						</div>
-					</div>
-				</div>
-				{{ form_rest(form) }}
-			</form>
+    .collection .collection-item.avatar i.circle-avatar-status > span {
+      font-size: 16px;
+      font-style: normal;
+    }
 
-			<div class="row">
-				<div class="col m5">
-					<span><b>	My Contacts</b></span>
-					<ul class="collection">
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
-						</li>
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
-						</li>
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
-						</li>
-					</ul>
-				</div>
-				<div class="col m2">	</div>
-				<div class="col m5">
-					<span><b> Contacts</b></span>
-					<ul class="collection">
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact disable-contact-color"></i></a>
-						</li>
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
-						</li>
-						<li class="collection-item avatar">
-							<img src="{{ asset('bundles/dashboard/people/02.jpg') }}" alt="" class="circle">
-							<span class="title" style="padding: 0px;">Livan Frometa</span>
-							<p>llfrometa@gmail.com</p>
-							<a href="#!" class="secondary-content"><i class="circle enable-contact enable-contact-color"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
+    .collection .collection-item.avatar {
+      min-height: 60px;
+    }
 
-		</div>
-	</div>
-	<script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
-	<script>
-		$(document).ready(function(){
-			$('#save_action').click(function(){
-				App.submit('formSubmit','{{ path('contactlist_update', { 'id': entity.id }) }}')
-			});
-		});
-	</script>
+    .circle-status.red {
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      overflow: hidden;
+      left: 190px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .circle-status.green {
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      overflow: hidden;
+      left: 15px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .arrow-switch{
+      color: #424242;
+      font-size: 30px;
+      background-color: #F9F9F9;
+      border-radius: 4px;
+    }
+
+    .secundary-content-center{
+       top: 20px !important;
+     }
+
+    .arrow-switch:hover{
+      background-color: #9E9E9E;
+    }
+
+    .primary-content{
+      position: absolute;
+      top: 20px !important;
+      left: 15px;
+    }
+    .circle-right{
+      left: 60px !important;
+    }
+
+    .avatar-right{
+      padding-left: 115px !important;
+    }
+
+  </style>
+  <div class="card card-data-grid">
+    <div class="title">
+      <h5> Contacts List</h5>
+      <div class="btn-group right">
+        <a href="{{ path('contactlist_index') }}" class="btn btn-small waves-dark waves-effect"><i
+              class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
+        <a id="save_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i>
+          Save</a>
+      </div>
+    </div>
+    <div class="content">
+      <form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+        <div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 1rem;">
+          <div class="row" style="margin-top: 0rem;">
+            <div class="col m12" style="padding-bottom: 15px;">
+              <div class="input-field">
+                {{ form_widget(form.name) }}
+                <label for="property_lease_term" class="">Name</label>
+              </div>
+            </div>
+          </div>
+        </div>
+        {{ form_rest(form) }}
+      </form>
+
+      <div class="row">
+        <div class="col m5">
+          <span><b> My Contacts</b></span>
+          <ul class="collection">
+            <li class="collection-item avatar">
+              <i class="red circle circle-avatar-status"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+              <a href="#!" class="secondary-content secundary-content-center">
+                <i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch"></i>
+              </a>
+            </li>
+            <li class="collection-item avatar">
+              <i class="green circle circle-avatar-status"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+              <a href="#!" class="secondary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-right  arrow-switch"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col m1"></div>
+        <div class="col m5">
+          <span><b> Contacts</b></span>
+          <ul class="collection">
+            <li class="collection-item avatar avatar-right">
+              <a href="#!" class="secondary-content primary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
+              </a>
+              <i class="red circle circle-avatar-status circle-right"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col m2" style="padding-right: 0px">
+          <i class="green circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Enable contact</b>
+        </div>
+
+        <div class="col m2">
+          <i class="red circle circle-status"> <span></span></i> <b style="margin-left: 30px;"> Disable contact</b>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
+  <script>
+    $(document).ready(function () {
+      $('#save_action').click(function () {
+        App.submit('formSubmit', '{{ path('contactlist_update', { 'id': entity.id }) }}')
+      });
+    });
+  </script>
 {% endblock content %}
