add card for a customer

--- a/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
@@ -1,5 +1,5 @@
-<form action="" method="POST" id="payment-form">
-    <span class="payment-errors"></span>
+<form action="" method="POST" id="card-information-form">
+    <span class="errors"></span>
 
     <div class="form-row">
         <label>
