Create contact functionality

--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -141,7 +141,38 @@
               <i class="red circle circle-avatar-status circle-right"> <span>LF</span></i>
               <span class="title" style="padding: 0px;">Livan Frometa</span>
               <p>llfrometa@gmail.com</p>
-
+            </li>
+            <li class="collection-item avatar avatar-right">
+              <a href="#!" class="secondary-content primary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
+              </a>
+              <i class="red circle circle-avatar-status circle-right"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+            </li>
+            <li class="collection-item avatar avatar-right">
+              <a href="#!" class="secondary-content primary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
+              </a>
+              <i class="red circle circle-avatar-status circle-right"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+            </li>
+            <li class="collection-item avatar avatar-right">
+              <a href="#!" class="secondary-content primary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
+              </a>
+              <i class="green circle circle-avatar-status circle-right"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
+            </li>
+            <li class="collection-item avatar avatar-right">
+              <a href="#!" class="secondary-content primary-content">
+                <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch"></i>
+              </a>
+              <i class="green circle circle-avatar-status circle-right"> <span>LF</span></i>
+              <span class="title" style="padding: 0px;">Livan Frometa</span>
+              <p>llfrometa@gmail.com</p>
             </li>
           </ul>
         </div>
